Changes: * Cleaned up code, removed uneccessary files using PyQt5 since that is not being used in the web app and is archived on GitHub as a seperate branch * Delete account requires Password * Added Favicon * Updated Titles of each page and added "Stroke Prediction" to each title If I have time what I will work on next: + Making it more obvious you change profile picture in settings + Fix white space issue in Dashboard + Center elements in Navbar

--- a/BackEndFrontEnd/App_be/controller/user/templates/settings.html
+++ b/BackEndFrontEnd/App_be/controller/user/templates/settings.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
-{%set title='Settings'%}
+{%set title='Settings - Stroke Prediction'%}
 {%block css_block%}
 {%endblock%}
 {%block main_content %}
@@ -29,7 +29,7 @@
         </div>
         <button class="btn btn-primary">Save</button>
         <br/>
-        <a href="{{url_for('user_actions.delete_account')}}" class="btn mt-3 btn-danger">Delete account</a>
+        <button href="{{url_for('user_actions.delete_account')}}" class="btn mt-3 btn-danger">Delete account</button>
       </form>
     </div>
   </div>
