--- a/BackEndFrontEnd/App_be/controller/home/templates/home.html
+++ b/BackEndFrontEnd/App_be/controller/home/templates/home.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
-{%set title='HOME'%}
+{%set title='Dashboard - Stroke Prediction'%}
 {%block main_content %}
 {%include 'header_home.html'%}
 <div class="container-fluid vh-100 bg-light p-md-5">
