--- a/BackEndFrontEnd/App_be/controller/user/templates/login.html
+++ b/BackEndFrontEnd/App_be/controller/user/templates/login.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
-{%set title='Login'%}
+{%set title='Login - Stroke Prediction'%}
 {%block css_block%}
 <link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
 {%endblock%}
