--- a/BackEndFrontEnd/App_be/controller/user/templates/register.html
+++ b/BackEndFrontEnd/App_be/controller/user/templates/register.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
-{%set title='Register'%}
+{%set title='Register - Stroke Prediction'%}
 {%block css_block%}
 <link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
 {%endblock%}
