--- a/BackEndFrontEnd/App_be/templates/header_home.html
+++ b/BackEndFrontEnd/App_be/templates/header_home.html
@@ -7,6 +7,9 @@
             <div class="collapse navbar-collapse justify-content-between" id="menu">
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        <a class="nav-link">Signed in as: {{user.username}}</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {%if request.path=='/'%}active{%endif%}" href="{{url_for('home_actions.index')}}"><i class="fas fa-home"></i> Home</a>
                     </li>
                     <li class="nav-item">
