Fixed font size for when the system predicts a stroke and fixed a typo

--- a/BackEndFrontEnd/App_be/controller/home/templates/landing_page.html
+++ b/BackEndFrontEnd/App_be/controller/home/templates/landing_page.html
@@ -1,5 +1,5 @@
 {%extends 'landing_base.html'%}
-{%set title='YOO - Stroke Prediction'%}
+{%set title='Home - Stroke Prediction'%}
 
 
 {% block head %}
