--- a/BackEndFrontEnd/App_be/controller/home/templates/home.html
+++ b/BackEndFrontEnd/App_be/controller/home/templates/home.html
@@ -20,13 +20,13 @@
         </div>
         <div class="form-group row">
           <div class="col-sm-12">
-            <input type="number" class="form-control" step="any" required  name="feet" required  placeholder="Feets">
+            <input type="number" class="form-control" step="any" required  name="feet" required  placeholder="Feet">
           </div>
         </div>
 
         <div class="form-group row">
           <div class="col-sm-12">
-            <input type="number" class="form-control" step="any" required  name="inches" required  placeholder="inches">
+            <input type="number" class="form-control" step="any" required  name="inches" required  placeholder="Inches">
           </div>
         </div>
 
