Updated slide deck and reverted delete button back to anchor tag. The button kept refreshing the form since the form was designed with save button in mind

--- a/BackEndFrontEnd/App_be/controller/user/templates/settings.html
+++ b/BackEndFrontEnd/App_be/controller/user/templates/settings.html
@@ -29,7 +29,7 @@
         </div>
         <button class="btn btn-primary float-left" style="width:40%;border-radius: 30px;">Save</button>
         
-        <button href="{{url_for('user_actions.delete_account')}}" style="width:40%;border-radius: 30px;" class="btn btn-danger float-right">Delete account</button>
+        <a href="{{url_for('user_actions.delete_account')}}" style="width:40%;border-radius: 30px;" class="btn btn-danger float-right">Delete account</a>
       </form>
     </div>
   </div>
